<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dip"
    android:paddingTop="15dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="7dp"
        android:layout_weight="0.75"
        android:text="@string/app_name"
        android:textColor="@color/PurpleSMSConverter"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageViewLogo"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="5"
        android:src="@drawable/logobig" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/flat_selector"
        android:text="@string/button_startagain" />


    <TextView
        android:id="@+id/infoStartPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStart"
        android:gravity="center"
        android:lines="2"
        android:text="@string/noPermissionsGranted" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoStartPermission"
        android:gravity="center"
        android:lines="2"
        android:text="@string/InfoVersion"
        android:textColor="@color/PurpleSMSConverter"
        android:textSize="24sp" />


</LinearLayout>