<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layout_photo"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/header"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:background="@color/primary"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/layout_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:src="@drawable/ic_android"
        android:transitionName="@string/transition_app_icon"
        app:layout_constraintBottom_toTopOf="@+id/layout_nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/layout_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="nom"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_tel"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_photo" />

    <TextView
        android:id="@+id/layout_tel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center_horizontal"
        android:text="telephone"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_nom" />


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="21dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/convert_card"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_tel">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:maxHeight="30dp"
            android:maxWidth="30dp"
            android:src="@drawable/ic_googleplay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="re.devboxx.ceo"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/convert_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/sent_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <!-- ****************************************************************** CONVERT CARD VIEW   *************************************************************** -->
        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="233dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/start_convert"
                android:textColor="@color/PurpleSMSConverter"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.155"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="269dp"
                android:layout_height="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:singleLine="true"
                android:text="@string/start_convert2"
                android:textColor="@color/PurpleSMSConverter"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sent_card"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/files_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_card">
        <!-- ****************************************************************** SEND CARD VIEW   *************************************************************** -->
        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/start_sent"
                android:textColor="@color/PurpleSMSConverter"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/send_detail"
                android:layout_width="316dp"
                android:layout_height="22dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:singleLine="true"
                android:text="@string/start_sent2"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />


            <AutoCompleteTextView
                android:id="@+id/autoCompleteMail"
                style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
                android:layout_width="316dp"
                android:layout_height="41dp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:ellipsize="end"

                android:singleLine="true"
                android:text="AutoCompleteTextView"
                android:textColor="@color/PurpleSMSConverter"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/files_card"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sent_card">

        <!-- ****************************************************************** FILES CARD VIEW   *************************************************************** -->
        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="351dp"
            android:layout_height="107dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/start_showFile"
                android:textColor="@color/PurpleSMSConverter"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--   PDF Icon -->
            <ImageView
                android:id="@+id/showFilePDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/icon_height"
                android:maxWidth="50dp"
                android:src="@drawable/pdfbng"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />
            <!--   XML Icon -->
            <ImageView
                android:id="@+id/showFileXML"
                android:layout_width="29dp"
                android:layout_height="34dp"

                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/icon_height"
                android:maxWidth="50dp"
                android:src="@drawable/xmlbng"
                app:layout_constraintStart_toEndOf="@+id/showFileHTML"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />
            <!--   CSV Icon -->
            <ImageView
                android:id="@+id/showFileCSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/icon_height"
                android:maxWidth="50dp"
                android:src="@drawable/csvbng"
                app:layout_constraintStart_toEndOf="@+id/showFilePDF"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />
            <!--   HTML Icon -->
            <ImageView
                android:id="@+id/showFileHTML"
                android:layout_width="29dp"
                android:layout_height="35dp"

                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/icon_height"
                android:maxWidth="50dp"
                android:src="@drawable/htmlbng"
                app:layout_constraintStart_toEndOf="@+id/showFileTXT"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />
            <!--   JSON Icon -->
            <ImageView
                android:id="@+id/showFileJSON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/icon_height"
                android:maxWidth="50dp"
                android:src="@drawable/jsonbng"
                app:layout_constraintStart_toEndOf="@+id/showFileCSV"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />
            <!--   TXT Icon -->
            <ImageView
                android:id="@+id/showFileTXT"
                android:layout_width="36dp"
                android:layout_height="32dp"

                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/icon_height"
                android:maxWidth="50dp"
                android:src="@drawable/txtbng"
                app:layout_constraintStart_toEndOf="@+id/showFileJSON"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
